service.yaml
apiVersion: v1
kind: Service
metadata:
  name: desafio-jackexperts
spec:
  selector:
    app: desafio-jackexperts
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort  # ou LoadBalancer, dependendo da sua configuração
