ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: desafio-jackexperts-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "localhost"  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: desafio-jackexperts
            port:
              number: 80
